--- a/ProtoOne.ipynb
+++ b/ProtoOne.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "class Task:\n",
     "    def __init__(self, TaskDescription: str = \"dscr\", Result:str = \"not solved\", Solved:bool = False):\n",
-    "        self.TaskDescription:str = TaskDescription\n",
+    "        self.Description:str = TaskDescription\n",
     "        self.Result:str = Result\n",
     "        self.Solved:bool = Solved\n",
     "        self.ChildTasks:List[Task] = []\n",
@@ -90,9 +90,9 @@
     "        \n",
     "    def __str__(self)->str:\n",
     "        if(self.Solved):\n",
-    "            return \"Solved[\"+self.TaskDescription+\"]>>\"+self.Result\n",
+    "            return \"Solved[\"+self.Description+\"]>>\"+self.Result\n",
     "        else:\n",
-    "            return \"Unsolved[\"+self.TaskDescription+\"]>>\"+self.Result\n",
+    "            return \"Unsolved[\"+self.Description+\"]>>\"+self.Result\n",
     "        \n",
     "    def get_all_tasks(self, visited: Set['Task'] = None) -> List['Task']:\n",
     "        if visited is None:\n",
@@ -143,6 +143,7 @@
     "        self.Objectiv:Task = Task(Objectiv)\n",
     "        self.Taskpool = Taskpool()\n",
     "        self.Taskpool.append(self.Objectiv)\n",
+    "        self.chat = ChatOpenAI(temperature=0, max_tokens=-1)\n",
     "\n",
     "    def extract_json(self,text):\n",
     "        # Find a JSON object or array pattern in the text\n",
@@ -168,26 +169,19 @@
     "        if len(task.ChildTasks) != 0:\n",
     "            raise ValueError(\"Task is not atomic\")\n",
     "        \n",
-    "        print(\"Now in should_be_slpit:\" + task.TaskDescription)\n",
+    "        print(\"Now in should_be_slpit:\" + task.Description)\n",
     "\n",
-    "        chat = ChatOpenAI(temperature=0)\n",
     "        \n",
-    "        # Create SystemMessagePromptTemplate\n",
-    "        system_message_prompt = SystemMessagePromptTemplate.from_template(\n",
-    "            \"You are an AI that determines if a task could be split into multiple simpler tasks. Return 'True' if it could be split and 'False' otherwise. If a Task is too vague return 'True'. Dont be chaty.\"\n",
-    "        )\n",
+    "       \n",
     "\n",
-    "        # Create HumanMessagePromptTemplate\n",
-    "        human_message_prompt = HumanMessagePromptTemplate.from_template(\"Task description: {task_description}\")\n",
-    "\n",
-    "        # Combine MessagePromptTemplates into a ChatPromptTemplate\n",
-    "        chat_prompt = ChatPromptTemplate.from_messages([system_message_prompt, human_message_prompt])\n",
-    "\n",
-    "        # Initialize LLMChain\n",
-    "        chain = LLMChain(llm=chat, prompt=chat_prompt)\n",
-    "\n",
-    "        # Get AI response for the given task description\n",
-    "        response = chain.run(task_description=task.TaskDescription)\n",
+    "        messages = []\n",
+    "        messages.append(SystemMessage(content=\n",
+    "                                      \"You are an AI that determines if a task could be split into multiple simpler tasks. Return 'True' if it could be split and 'False' otherwise. If a Task is too vague return 'True'. Dont be chaty.\"))\n",
+    "        \n",
+    "        messages.append(HumanMessage(content=\n",
+    "                                     f\"Task description: {task.Description}\"))\n",
+    "        \n",
+    "        response = self.chat(messages).content\n",
     "\n",
     "        # Remove unnecessary characters and convert the response to lowercase\n",
     "        clean_response = response.strip().lower()\n",
@@ -202,22 +196,18 @@
     "        else:\n",
     "            raise ValueError(\"AI response does not contain a valid boolean string: \" + response)\n",
     "\n",
-    "        \n",
+    "\n",
     "    def SplitTask(self, task:Task, verbose: bool = True) -> List[Task]:\n",
-    "        print(\"Now in SplitTask:\" + task.TaskDescription)\n",
-    "        \n",
-    "        chat = ChatOpenAI(temperature=0)\n",
+    "        print(\"Now in SplitTask:\" + task.Description)\n",
     "\n",
-    "        system_message_prompt = SystemMessagePromptTemplate.from_template(\"ChatGPT, as a task-splitting AI, please analyze the following main task and provide independent, helpful subtasks that contribute to its successful completion. Keep the response concise and focused.\"\n",
-    "                                                                          \"Keep in mind that the subtasks should be independent of each other and can be completed in any order and independently. The main Task will be solved as soon as all subtasks are solved.\")\n",
+    "        messages = []\n",
+    "        messages.append(SystemMessage(content=\"ChatGPT, as a task-splitting AI, please analyze the following main task and provide independent, helpful subtasks that contribute to its successful completion. Keep the response concise and focused.\"\n",
+    "                                                                          \"Keep in mind that the subtasks should be independent of each other and can be completed in any order and independently. The main Task will be solved as soon as all subtasks are solved.\"))\n",
     "        \n",
-    "        human_message_prompt = HumanMessagePromptTemplate.from_template(\"Task: {task}\")\n",
-    "        \n",
-    "        chat_prompt = ChatPromptTemplate.from_messages([system_message_prompt, human_message_prompt])\n",
-    "        messages = chat_prompt.format_prompt(task=task).to_messages();\n",
+    "        messages.append(HumanMessage(content=\"Task: \" + task.Description))\n",
     "\n",
-    "        # get a chat completion from the formatted messages\n",
-    "        generation = chat(chat_prompt.format_prompt(task=task).to_messages())\n",
+    "        #call OpenAI\n",
+    "        generation = self.chat(messages)\n",
     "\n",
     "        print(\"Splitted Tasks befor JSON packing: \" +generation.content)\n",
     "        \n",
@@ -225,7 +215,7 @@
     "        \n",
     "        messages.append(HumanMessage(content=\"\"\"Now transform this List of Tasks to an JSON Arrey of strings like [\"hello\", \"world\"].\"\"\"))\n",
     "        \n",
-    "        JSONSTR = chat(messages).content\n",
+    "        JSONSTR = self.chat(messages).content\n",
     "        print(\"Splitted Tasks as JSON \" +JSONSTR)\n",
     "\n",
     "        JSON = self.extract_json(JSONSTR)\n",
@@ -238,7 +228,6 @@
     "        return Tasks\n",
     "    \n",
     "    def DummySolveAtomicTask(self, task:Task, verbose: bool = True) -> Task:\n",
-    "        chat = ChatOpenAI(temperature=0)\n",
     "        finalMessages=[]\n",
     "        finalMessages.append(SystemMessage(content=\"You are a dummy task solver AI to test Systems. You simulate the solution to an Task, and returns belivable Informations and results. Dont be chaty. Concentrate on the results. Its not important if the Information its true, it just has to look like it is.\"))\n",
     "        \n",
@@ -246,25 +235,21 @@
     "        # Check if the task has any child tasks that have been solved\n",
     "        if task.ChildTasks and all(child_task.Solved for child_task in task.ChildTasks):\n",
     "            # Include the results of the child tasks in the task description\n",
-    "            task_description = f\"Maintask: {task.TaskDescription}. The results of the child tasks are: {', '.join(child_task.Result for child_task in task.ChildTasks)}\"\n",
+    "            task_description = f\"Maintask: {task.Description}. The results of the child tasks are: {', '.join(child_task.Result for child_task in task.ChildTasks)}\"\n",
     "            task_description+=\" Use these results to solve the main task.\"\n",
     "            finalMessages.append(HumanMessage(content=task_description))\n",
     "    \n",
     "\n",
-    "        finalMessages.append(HumanMessage(content=f\"Current Task: {task.TaskDescription}\"))\n",
+    "        finalMessages.append(HumanMessage(content=f\"Current Task: {task.Description}\"))\n",
     "\n",
     "        # get a chat completion from the formatted messages\n",
-    "        generated = chat(finalMessages).content\n",
+    "        generated = self.chat(finalMessages).content\n",
     "\n",
     "        task.Result = generated\n",
     "        task.Solved = True\n",
     "        return task\n",
     "    \n",
     "    \n",
-    "    \n",
-    "\n",
-    "    def is_collection_or_array(self,typ):\n",
-    "            return isinstance(typ, (List, Dict, Set))\n",
     "    \n",
     "    def ToJSON(self, text, class_obj) -> str:\n",
     "        chat = ChatOpenAI(temperature=0)\n",
